# NordVPN-WireGuard-Config-Generator

./: .travis.yml  Dockerfile  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml  extract_key.py  extract_proxy.py  get-key.py  install_curl.py  main.py  proxy_fetcher.py  requirements.txt
.github/workflows/: docker-publish.yml
Obsidian-plugin/: README.md  esbuild.config.mjs  manifest.json  package.json  styles.css  tsconfig.json  versions.json
Obsidian-plugin/src/: api.service.ts  constants.ts  main.ts  settings.ts  types.ts  utils.ts  view.ts
Web-version/: fetch-proxies.html  fetch-script.js  fetch-styles.css  index.html  index_script.js  index_styles.css  key-script.js  key-styles.css  key.html  main_script.js  main_styles.css  script.js  styles.css
Web/web-Backend/: API.md  README.md  go.mod  go.sum  main.go
Web/web-Backend/public/: index.html  index.html.br
Web/web-Frontend/: package.json  vite.config.js
Web/web-Frontend/src/: App.vue  style.css
go-version/: go.mod  main.go
node.js -version/: index.js  main.js  package.json
nordgen/: .gitignore  README.md  pyproject.toml
nordgen-go/: go.mod  go.sum
nordgen-go/cmd/nordgen/: main.go
nordgen-go/internal/client/: nord.go
nordgen-go/internal/structs/: types.go
nordgen-go/internal/tui/: console.go
nordgen/src/nord_config_generator/: client.py  generator.py  main.py  models.py  ui.py
ruby-version/: Gemfile  main.rb
rust-version/: Cargo.toml
rust-version/src/: main.rs
src/nordvpn/: main.go
web-version-V2/: .bunfig.toml  API.md  README.md  ecosystem.config.js  index.ts  package.json  server.js
web-version-V2-Frontend/: index.html  package.json
web-version-V2-Frontend/src/: App.vue  style.css
web-version-V2-Frontend/src/components/: ConfigCustomizer.vue  KeyGenerator.vue  ServerCard.vue  Toast.vue
web-version-V2-Frontend/src/composables/: useConfig.js  useServers.js  useUI.js
web-version-V2-Frontend/src/services/: apiService.js  secureStorageService.js
web-version-V2-Frontend/src/utils/: icons.js  utils.js
web-version-V2/handlers/: htmlHandler.js
web-version-V2/public/: index.html  index.html.br
web-version-V2/public/assets/: index-B0qu3io_.css  index-B5LD8fvQ.css  index-B5LD8fvQ.css.br  index-BJg46q_f.css  index-BJg46q_f.css.br  index-BTCuZRd5.js  index-BWofiL4I.css  index-CL_QXxxk.js  index-CL_QXxxk.js.br  index-CNMPqTt9.css  index-CNxw59CY.js  index-CdLwaC6x.css  index-CkJYBUFa.js  index-CkJYBUFa.js.br  index-DGd8DjFh.js  index-DOFIcHY0.js  index-DOZwtVOI.js  index-DTLLi-dL.js  index-DU_pynkf.css  index-DVLMaiOv.js  index-DauG1bgg.js  index-DauG1bgg.js.br  index-NQYAaSDe.js  index-NgbYBXEP.css  index-Ya-TpkP5.js  index-b0JLLR5J.js  index-b0JLLR5J.js.br  vue-vendor-CCvyW_1H.js.br  vue-vendor-T3y8gaLV.js  vue-vendor-T3y8gaLV.js.br
web-version-V2/src/__tests__/: index.test.ts
web-version-V2/src/endpoints/: config.ts  key.ts
web-version-V2/src/services/: configService.ts  serverService.ts
web-version-V2/src/utils/: logger.ts
web-version-V2/utils/: clientScript.js  generateHTML.js
web-version-V2/web-version-V2-Backend/: .bunfig.toml  API.md  README.md  go.mod  go.sum  index.ts  main.go  package.json  tsconfig.json
web-version-V2/web-version-V2-Backend/public/: index.html  index.html.br
web-version-V2/web-version-V2-Backend/src/: index.ts  types.ts
web-version-V2/web-version-V2-Frontend/: index.html  package.json  tailwind.config.js  vite.config.js
(+116 files in other folders)
