[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nord-config-generator"
version = "1.1.1"
authors = [
  { name="Ahmed Touhami", email="mustafachyi272@gmail.com" },
]
description = "A command-line tool for generating optimized NordVPN WireGuard configurations."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Environment :: Console",
]
dependencies = [
    "aiohttp>=3.13.0, <4.0",
    "rich>=14.1.0, <15.0",
]

[project.urls]
"Homepage" = "https://github.com/mustafachyi/NordVPN-WireGuard-Config-Generator"
"Bug Tracker" = "https://github.com/mustafachyi/NordVPN-WireGuard-Config-Generator/issues"

[project.scripts]
nordgen = "nord_config_generator.main:cli_entry_point"
