[package]
name = "nordvpn-wireguard-config-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1